exports[`<MenuItem /> changes properties on hover (level 1) 1`] = `
<MenuItem
  collapse={false}
  href={null}
  icon={
    Object {
      "className": " fa fa-circle-o",
      "color": "none",
    }
  }
  iconLeft={true}
  level={0}
  parentHover={false}
  title="Title">
  <styled.li
    collapse={false}
    hover={false}
    level={0}
    onMouseLeave={[Function]}>
    <li
      className="sc-gzVnrw bAnrUd"
      onMouseLeave={[Function]}>
      <styled.a
        collapse={false}
        hover={true}
        href={null}
        level={0}
        onMouseEnter={[Function]}>
        <a
          className="sc-EHOje jwlYFz"
          href={null}
          onMouseEnter={[Function]}>
          <styled.i
            className=" fa fa-circle-o"
            color="none">
            <i
              className=" fa fa-circle-o sc-ifAKCX gNVYmm"
              color="none" />
          </styled.i>
          <styled.span
            collapse={false}
            hover={true}
            level={0}>
            <span
              className="sc-htpNat kAgXoo">
              Title
            </span>
          </styled.span>
          <styled.span
            collapse={false}
            hover={true}
            level={0}>
            <span
              className="sc-bwzfXH hvfKsK" />
          </styled.span>
        </a>
      </styled.a>
    </li>
  </styled.li>
</MenuItem>
`;

exports[`<MenuItem /> changes properties on hover (level 1) 2`] = `
<MenuItem
  collapse={false}
  href={null}
  icon={
    Object {
      "className": " fa fa-circle-o",
      "color": "none",
    }
  }
  iconLeft={true}
  level={0}
  parentHover={false}
  title="Title">
  <styled.li
    collapse={false}
    hover={false}
    level={0}
    onMouseLeave={[Function]}>
    <li
      className="sc-gzVnrw bAnrUd"
      onMouseLeave={[Function]}>
      <styled.a
        collapse={false}
        hover={false}
        href={null}
        level={0}
        onMouseEnter={[Function]}>
        <a
          className="sc-EHOje hjNqII"
          href={null}
          onMouseEnter={[Function]}>
          <styled.i
            className=" fa fa-circle-o"
            color="none">
            <i
              className=" fa fa-circle-o sc-ifAKCX gNVYmm"
              color="none" />
          </styled.i>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-htpNat kAgXoo">
              Title
            </span>
          </styled.span>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-bwzfXH hvfKsK" />
          </styled.span>
        </a>
      </styled.a>
    </li>
  </styled.li>
</MenuItem>
`;

exports[`<MenuItem /> changes properties on hover (level 2-) 1`] = `
<MenuItem
  collapse={false}
  href={null}
  icon={
    Object {
      "className": " fa fa-circle-o",
      "color": "none",
    }
  }
  iconLeft={true}
  level={0}
  parentHover={false}
  title="Title">
  <styled.li
    collapse={false}
    hover={false}
    level={0}
    onMouseLeave={[Function]}>
    <li
      className="sc-gzVnrw bAnrUd"
      onMouseLeave={[Function]}>
      <styled.a
        collapse={false}
        hover={false}
        href={null}
        level={0}
        onClick={[Function]}
        onMouseEnter={[Function]}>
        <a
          className="sc-EHOje hjNqII"
          href={null}
          onClick={[Function]}
          onMouseEnter={[Function]}>
          <styled.i
            className=" fa fa-circle-o"
            color="none">
            <i
              className=" fa fa-circle-o sc-ifAKCX gNVYmm"
              color="none" />
          </styled.i>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-htpNat kAgXoo">
              Title
            </span>
          </styled.span>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-bwzfXH hvfKsK">
              <styled.i
                className="fa fa-angle-left"
                collapse={false}
                hover={false}
                open={false}>
                <i
                  className="fa fa-angle-left sc-bxivhb khdcYs"
                  open={false} />
              </styled.i>
            </span>
          </styled.span>
        </a>
      </styled.a>
      <styled.ul
        collapse={false}
        hover={false}
        level={0}
        open={false}>
        <ul
          className="sc-bZQynM hTFmts"
          open={false}>
          <MenuItem
            collapse={false}
            href={null}
            icon={
              Object {
                "className": " fa fa-circle-o",
                "color": "none",
              }
            }
            iconLeft={true}
            level={1}
            parentHover={false}
            title="Title">
            <styled.li
              collapse={false}
              hover={false}
              level={1}
              onMouseLeave={[Function]}>
              <li
                className="sc-gzVnrw bAnrUd"
                onMouseLeave={[Function]}>
                <styled.a
                  collapse={false}
                  hover={true}
                  href={null}
                  level={1}
                  onMouseEnter={[Function]}>
                  <a
                    className="sc-EHOje hPAdKy"
                    href={null}
                    onMouseEnter={[Function]}>
                    <styled.i
                      className=" fa fa-circle-o"
                      color="none">
                      <i
                        className=" fa fa-circle-o sc-ifAKCX gNVYmm"
                        color="none" />
                    </styled.i>
                    <styled.span
                      collapse={false}
                      hover={true}
                      level={1}>
                      <span
                        className="sc-htpNat kAgXoo">
                        Title
                      </span>
                    </styled.span>
                    <styled.span
                      collapse={false}
                      hover={true}
                      level={1}>
                      <span
                        className="sc-bwzfXH hvfKsK" />
                    </styled.span>
                  </a>
                </styled.a>
              </li>
            </styled.li>
          </MenuItem>
        </ul>
      </styled.ul>
    </li>
  </styled.li>
</MenuItem>
`;

exports[`<MenuItem /> changes properties on hover (level 2-) 2`] = `
<MenuItem
  collapse={false}
  href={null}
  icon={
    Object {
      "className": " fa fa-circle-o",
      "color": "none",
    }
  }
  iconLeft={true}
  level={0}
  parentHover={false}
  title="Title">
  <styled.li
    collapse={false}
    hover={false}
    level={0}
    onMouseLeave={[Function]}>
    <li
      className="sc-gzVnrw bAnrUd"
      onMouseLeave={[Function]}>
      <styled.a
        collapse={false}
        hover={false}
        href={null}
        level={0}
        onClick={[Function]}
        onMouseEnter={[Function]}>
        <a
          className="sc-EHOje hjNqII"
          href={null}
          onClick={[Function]}
          onMouseEnter={[Function]}>
          <styled.i
            className=" fa fa-circle-o"
            color="none">
            <i
              className=" fa fa-circle-o sc-ifAKCX gNVYmm"
              color="none" />
          </styled.i>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-htpNat kAgXoo">
              Title
            </span>
          </styled.span>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-bwzfXH hvfKsK">
              <styled.i
                className="fa fa-angle-left"
                collapse={false}
                hover={false}
                open={false}>
                <i
                  className="fa fa-angle-left sc-bxivhb khdcYs"
                  open={false} />
              </styled.i>
            </span>
          </styled.span>
        </a>
      </styled.a>
      <styled.ul
        collapse={false}
        hover={false}
        level={0}
        open={false}>
        <ul
          className="sc-bZQynM hTFmts"
          open={false}>
          <MenuItem
            collapse={false}
            href={null}
            icon={
              Object {
                "className": " fa fa-circle-o",
                "color": "none",
              }
            }
            iconLeft={true}
            level={1}
            parentHover={false}
            title="Title">
            <styled.li
              collapse={false}
              hover={false}
              level={1}
              onMouseLeave={[Function]}>
              <li
                className="sc-gzVnrw bAnrUd"
                onMouseLeave={[Function]}>
                <styled.a
                  collapse={false}
                  hover={false}
                  href={null}
                  level={1}
                  onMouseEnter={[Function]}>
                  <a
                    className="sc-EHOje cGNlvO"
                    href={null}
                    onMouseEnter={[Function]}>
                    <styled.i
                      className=" fa fa-circle-o"
                      color="none">
                      <i
                        className=" fa fa-circle-o sc-ifAKCX gNVYmm"
                        color="none" />
                    </styled.i>
                    <styled.span
                      collapse={false}
                      hover={false}
                      level={1}>
                      <span
                        className="sc-htpNat kAgXoo">
                        Title
                      </span>
                    </styled.span>
                    <styled.span
                      collapse={false}
                      hover={false}
                      level={1}>
                      <span
                        className="sc-bwzfXH hvfKsK" />
                    </styled.span>
                  </a>
                </styled.a>
              </li>
            </styled.li>
          </MenuItem>
        </ul>
      </styled.ul>
    </li>
  </styled.li>
</MenuItem>
`;

exports[`<MenuItem /> changes properties on hover when collapsed (level 1) 1`] = `
<MenuItem
  collapse={true}
  href={null}
  icon={
    Object {
      "className": " fa fa-circle-o",
      "color": "none",
    }
  }
  iconLeft={true}
  level={0}
  parentHover={false}
  title="Title">
  <styled.li
    collapse={true}
    hover={false}
    level={0}
    onMouseLeave={[Function]}>
    <li
      className="sc-gzVnrw bAnrUd"
      onMouseLeave={[Function]}>
      <styled.a
        collapse={true}
        hover={true}
        href={null}
        level={0}
        onClick={[Function]}
        onMouseEnter={[Function]}>
        <a
          className="sc-EHOje jwlYFz"
          href={null}
          onClick={[Function]}
          onMouseEnter={[Function]}>
          <styled.i
            className=" fa fa-circle-o"
            color="none">
            <i
              className=" fa fa-circle-o sc-ifAKCX gNVYmm"
              color="none" />
          </styled.i>
          <styled.span
            collapse={true}
            hover={true}
            level={0}>
            <span
              className="sc-htpNat ChTag">
              Title
            </span>
          </styled.span>
          <styled.span
            collapse={true}
            hover={true}
            level={0}>
            <span
              className="sc-bwzfXH lglpWA">
              <styled.i
                className="fa fa-angle-left"
                collapse={true}
                hover={true}
                open={false}>
                <i
                  className="fa fa-angle-left sc-bxivhb khdcYs"
                  open={false} />
              </styled.i>
            </span>
          </styled.span>
        </a>
      </styled.a>
      <styled.ul
        collapse={true}
        hover={true}
        level={0}
        open={false}>
        <ul
          className="sc-bZQynM hBWCow"
          open={false}>
          <MenuItem
            collapse={true}
            href={null}
            icon={
              Object {
                "className": " fa fa-circle-o",
                "color": "none",
              }
            }
            iconLeft={true}
            level={1}
            parentHover={true}
            title="Title">
            <styled.li
              collapse={true}
              hover={true}
              level={1}
              onMouseLeave={[Function]}>
              <li
                className="sc-gzVnrw bAnrUd"
                onMouseLeave={[Function]}>
                <styled.a
                  collapse={true}
                  hover={false}
                  href={null}
                  level={1}
                  onMouseEnter={[Function]}>
                  <a
                    className="sc-EHOje cGNlvO"
                    href={null}
                    onMouseEnter={[Function]}>
                    <styled.i
                      className=" fa fa-circle-o"
                      color="none">
                      <i
                        className=" fa fa-circle-o sc-ifAKCX gNVYmm"
                        color="none" />
                    </styled.i>
                    <styled.span
                      collapse={true}
                      hover={false}
                      level={1}>
                      <span
                        className="sc-htpNat kAgXoo">
                        Title
                      </span>
                    </styled.span>
                    <styled.span
                      collapse={true}
                      hover={false}
                      level={1}>
                      <span
                        className="sc-bwzfXH hvfKsK" />
                    </styled.span>
                  </a>
                </styled.a>
              </li>
            </styled.li>
          </MenuItem>
        </ul>
      </styled.ul>
    </li>
  </styled.li>
</MenuItem>
`;

exports[`<MenuItem /> changes properties on hover when collapsed (level 1) 2`] = `
<MenuItem
  collapse={true}
  href={null}
  icon={
    Object {
      "className": " fa fa-circle-o",
      "color": "none",
    }
  }
  iconLeft={true}
  level={0}
  parentHover={false}
  title="Title">
  <styled.li
    collapse={true}
    hover={false}
    level={0}
    onMouseLeave={[Function]}>
    <li
      className="sc-gzVnrw bAnrUd"
      onMouseLeave={[Function]}>
      <styled.a
        collapse={true}
        hover={false}
        href={null}
        level={0}
        onClick={[Function]}
        onMouseEnter={[Function]}>
        <a
          className="sc-EHOje hjNqII"
          href={null}
          onClick={[Function]}
          onMouseEnter={[Function]}>
          <styled.i
            className=" fa fa-circle-o"
            color="none">
            <i
              className=" fa fa-circle-o sc-ifAKCX gNVYmm"
              color="none" />
          </styled.i>
          <styled.span
            collapse={true}
            hover={false}
            level={0}>
            <span
              className="sc-htpNat dYxBut">
              Title
            </span>
          </styled.span>
          <styled.span
            collapse={true}
            hover={false}
            level={0}>
            <span
              className="sc-bwzfXH hvfKsK">
              <styled.i
                className="fa fa-angle-left"
                collapse={true}
                hover={false}
                open={false}>
                <i
                  className="fa fa-angle-left sc-bxivhb diMiR"
                  open={false} />
              </styled.i>
            </span>
          </styled.span>
        </a>
      </styled.a>
      <styled.ul
        collapse={true}
        hover={false}
        level={0}
        open={false}>
        <ul
          className="sc-bZQynM hBWCow"
          open={false}>
          <MenuItem
            collapse={true}
            href={null}
            icon={
              Object {
                "className": " fa fa-circle-o",
                "color": "none",
              }
            }
            iconLeft={true}
            level={1}
            parentHover={false}
            title="Title">
            <styled.li
              collapse={true}
              hover={false}
              level={1}
              onMouseLeave={[Function]}>
              <li
                className="sc-gzVnrw bAnrUd"
                onMouseLeave={[Function]}>
                <styled.a
                  collapse={true}
                  hover={false}
                  href={null}
                  level={1}
                  onMouseEnter={[Function]}>
                  <a
                    className="sc-EHOje cGNlvO"
                    href={null}
                    onMouseEnter={[Function]}>
                    <styled.i
                      className=" fa fa-circle-o"
                      color="none">
                      <i
                        className=" fa fa-circle-o sc-ifAKCX gNVYmm"
                        color="none" />
                    </styled.i>
                    <styled.span
                      collapse={true}
                      hover={false}
                      level={1}>
                      <span
                        className="sc-htpNat kAgXoo">
                        Title
                      </span>
                    </styled.span>
                    <styled.span
                      collapse={true}
                      hover={false}
                      level={1}>
                      <span
                        className="sc-bwzfXH hvfKsK" />
                    </styled.span>
                  </a>
                </styled.a>
              </li>
            </styled.li>
          </MenuItem>
        </ul>
      </styled.ul>
    </li>
  </styled.li>
</MenuItem>
`;

exports[`<MenuItem /> changes properties on hover when collapsed (level 2-) 1`] = `
<MenuItem
  collapse={true}
  href={null}
  icon={
    Object {
      "className": " fa fa-circle-o",
      "color": "none",
    }
  }
  iconLeft={true}
  level={1}
  parentHover={false}
  title="Title">
  <styled.li
    collapse={true}
    hover={false}
    level={1}
    onMouseLeave={[Function]}>
    <li
      className="sc-gzVnrw bAnrUd"
      onMouseLeave={[Function]}>
      <styled.a
        collapse={true}
        hover={true}
        href={null}
        level={1}
        onMouseEnter={[Function]}>
        <a
          className="sc-EHOje hPAdKy"
          href={null}
          onMouseEnter={[Function]}>
          <styled.i
            className=" fa fa-circle-o"
            color="none">
            <i
              className=" fa fa-circle-o sc-ifAKCX gNVYmm"
              color="none" />
          </styled.i>
          <styled.span
            collapse={true}
            hover={true}
            level={1}>
            <span
              className="sc-htpNat kAgXoo">
              Title
            </span>
          </styled.span>
          <styled.span
            collapse={true}
            hover={true}
            level={1}>
            <span
              className="sc-bwzfXH hvfKsK" />
          </styled.span>
        </a>
      </styled.a>
    </li>
  </styled.li>
</MenuItem>
`;

exports[`<MenuItem /> changes properties on hover when collapsed (level 2-) 2`] = `
<MenuItem
  collapse={true}
  href={null}
  icon={
    Object {
      "className": " fa fa-circle-o",
      "color": "none",
    }
  }
  iconLeft={true}
  level={1}
  parentHover={false}
  title="Title">
  <styled.li
    collapse={true}
    hover={false}
    level={1}
    onMouseLeave={[Function]}>
    <li
      className="sc-gzVnrw bAnrUd"
      onMouseLeave={[Function]}>
      <styled.a
        collapse={true}
        hover={false}
        href={null}
        level={1}
        onMouseEnter={[Function]}>
        <a
          className="sc-EHOje cGNlvO"
          href={null}
          onMouseEnter={[Function]}>
          <styled.i
            className=" fa fa-circle-o"
            color="none">
            <i
              className=" fa fa-circle-o sc-ifAKCX gNVYmm"
              color="none" />
          </styled.i>
          <styled.span
            collapse={true}
            hover={false}
            level={1}>
            <span
              className="sc-htpNat kAgXoo">
              Title
            </span>
          </styled.span>
          <styled.span
            collapse={true}
            hover={false}
            level={1}>
            <span
              className="sc-bwzfXH hvfKsK" />
          </styled.span>
        </a>
      </styled.a>
    </li>
  </styled.li>
</MenuItem>
`;

exports[`<MenuItem /> opens and closes on click 1`] = `
<MenuItem
  collapse={false}
  href={null}
  icon={
    Object {
      "className": " fa fa-circle-o",
      "color": "none",
    }
  }
  iconLeft={true}
  level={0}
  parentHover={false}
  title="Title">
  <styled.li
    collapse={false}
    hover={false}
    level={0}
    onMouseLeave={[Function]}>
    <li
      className="sc-gzVnrw bAnrUd"
      onMouseLeave={[Function]}>
      <styled.a
        collapse={false}
        hover={false}
        href={null}
        level={0}
        onClick={[Function]}
        onMouseEnter={[Function]}>
        <a
          className="sc-EHOje hjNqII"
          href={null}
          onClick={[Function]}
          onMouseEnter={[Function]}>
          <styled.i
            className=" fa fa-circle-o"
            color="none">
            <i
              className=" fa fa-circle-o sc-ifAKCX gNVYmm"
              color="none" />
          </styled.i>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-htpNat kAgXoo">
              Title
            </span>
          </styled.span>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-bwzfXH hvfKsK">
              <styled.i
                className="fa fa-angle-left"
                collapse={false}
                hover={false}
                open={true}>
                <i
                  className="fa fa-angle-left sc-bxivhb kakpWc"
                  open={true} />
              </styled.i>
            </span>
          </styled.span>
        </a>
      </styled.a>
      <styled.ul
        collapse={false}
        hover={false}
        level={0}
        open={true}>
        <ul
          className="sc-bZQynM QOuzx"
          open={true}>
          <MenuItem
            collapse={false}
            href={null}
            icon={
              Object {
                "className": " fa fa-circle-o",
                "color": "none",
              }
            }
            iconLeft={true}
            level={1}
            parentHover={false}
            title="Title">
            <styled.li
              collapse={false}
              hover={false}
              level={1}
              onMouseLeave={[Function]}>
              <li
                className="sc-gzVnrw bAnrUd"
                onMouseLeave={[Function]}>
                <styled.a
                  collapse={false}
                  hover={false}
                  href={null}
                  level={1}
                  onMouseEnter={[Function]}>
                  <a
                    className="sc-EHOje cGNlvO"
                    href={null}
                    onMouseEnter={[Function]}>
                    <styled.i
                      className=" fa fa-circle-o"
                      color="none">
                      <i
                        className=" fa fa-circle-o sc-ifAKCX gNVYmm"
                        color="none" />
                    </styled.i>
                    <styled.span
                      collapse={false}
                      hover={false}
                      level={1}>
                      <span
                        className="sc-htpNat kAgXoo">
                        Title
                      </span>
                    </styled.span>
                    <styled.span
                      collapse={false}
                      hover={false}
                      level={1}>
                      <span
                        className="sc-bwzfXH hvfKsK" />
                    </styled.span>
                  </a>
                </styled.a>
              </li>
            </styled.li>
          </MenuItem>
        </ul>
      </styled.ul>
    </li>
  </styled.li>
</MenuItem>
`;

exports[`<MenuItem /> opens and closes on click 2`] = `
<MenuItem
  collapse={false}
  href={null}
  icon={
    Object {
      "className": " fa fa-circle-o",
      "color": "none",
    }
  }
  iconLeft={true}
  level={0}
  parentHover={false}
  title="Title">
  <styled.li
    collapse={false}
    hover={false}
    level={0}
    onMouseLeave={[Function]}>
    <li
      className="sc-gzVnrw bAnrUd"
      onMouseLeave={[Function]}>
      <styled.a
        collapse={false}
        hover={false}
        href={null}
        level={0}
        onClick={[Function]}
        onMouseEnter={[Function]}>
        <a
          className="sc-EHOje hjNqII"
          href={null}
          onClick={[Function]}
          onMouseEnter={[Function]}>
          <styled.i
            className=" fa fa-circle-o"
            color="none">
            <i
              className=" fa fa-circle-o sc-ifAKCX gNVYmm"
              color="none" />
          </styled.i>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-htpNat kAgXoo">
              Title
            </span>
          </styled.span>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-bwzfXH hvfKsK">
              <styled.i
                className="fa fa-angle-left"
                collapse={false}
                hover={false}
                open={false}>
                <i
                  className="fa fa-angle-left sc-bxivhb khdcYs"
                  open={false} />
              </styled.i>
            </span>
          </styled.span>
        </a>
      </styled.a>
      <styled.ul
        collapse={false}
        hover={false}
        level={0}
        open={false}>
        <ul
          className="sc-bZQynM hTFmts"
          open={false}>
          <MenuItem
            collapse={false}
            href={null}
            icon={
              Object {
                "className": " fa fa-circle-o",
                "color": "none",
              }
            }
            iconLeft={true}
            level={1}
            parentHover={false}
            title="Title">
            <styled.li
              collapse={false}
              hover={false}
              level={1}
              onMouseLeave={[Function]}>
              <li
                className="sc-gzVnrw bAnrUd"
                onMouseLeave={[Function]}>
                <styled.a
                  collapse={false}
                  hover={false}
                  href={null}
                  level={1}
                  onMouseEnter={[Function]}>
                  <a
                    className="sc-EHOje cGNlvO"
                    href={null}
                    onMouseEnter={[Function]}>
                    <styled.i
                      className=" fa fa-circle-o"
                      color="none">
                      <i
                        className=" fa fa-circle-o sc-ifAKCX gNVYmm"
                        color="none" />
                    </styled.i>
                    <styled.span
                      collapse={false}
                      hover={false}
                      level={1}>
                      <span
                        className="sc-htpNat kAgXoo">
                        Title
                      </span>
                    </styled.span>
                    <styled.span
                      collapse={false}
                      hover={false}
                      level={1}>
                      <span
                        className="sc-bwzfXH hvfKsK" />
                    </styled.span>
                  </a>
                </styled.a>
              </li>
            </styled.li>
          </MenuItem>
        </ul>
      </styled.ul>
    </li>
  </styled.li>
</MenuItem>
`;

exports[`<MenuItem /> renders correctly collapsed with multiple levels 1`] = `
<MenuItem
  collapse={true}
  href={null}
  icon={
    Object {
      "className": " fa fa-circle-o",
      "color": "none",
    }
  }
  iconLeft={true}
  level={0}
  parentHover={false}
  title="Title">
  <styled.li
    collapse={true}
    hover={false}
    level={0}
    onMouseLeave={[Function]}>
    <li
      className="sc-gzVnrw bAnrUd"
      onMouseLeave={[Function]}>
      <styled.a
        collapse={true}
        hover={false}
        href={null}
        level={0}
        onClick={[Function]}
        onMouseEnter={[Function]}>
        <a
          className="sc-EHOje hjNqII"
          href={null}
          onClick={[Function]}
          onMouseEnter={[Function]}>
          <styled.i
            className=" fa fa-circle-o"
            color="none">
            <i
              className=" fa fa-circle-o sc-ifAKCX gNVYmm"
              color="none" />
          </styled.i>
          <styled.span
            collapse={true}
            hover={false}
            level={0}>
            <span
              className="sc-htpNat dYxBut">
              Title
            </span>
          </styled.span>
          <styled.span
            collapse={true}
            hover={false}
            level={0}>
            <span
              className="sc-bwzfXH hvfKsK">
              <styled.i
                className="fa fa-angle-left"
                collapse={true}
                hover={false}
                open={false}>
                <i
                  className="fa fa-angle-left sc-bxivhb diMiR"
                  open={false} />
              </styled.i>
            </span>
          </styled.span>
        </a>
      </styled.a>
      <styled.ul
        collapse={true}
        hover={false}
        level={0}
        open={false}>
        <ul
          className="sc-bZQynM hBWCow"
          open={false}>
          <MenuItem
            collapse={true}
            href={null}
            icon={
              Object {
                "className": " fa fa-circle-o",
                "color": "none",
              }
            }
            iconLeft={true}
            level={1}
            parentHover={false}
            title="Title">
            <styled.li
              collapse={true}
              hover={false}
              level={1}
              onMouseLeave={[Function]}>
              <li
                className="sc-gzVnrw bAnrUd"
                onMouseLeave={[Function]}>
                <styled.a
                  collapse={true}
                  hover={false}
                  href={null}
                  level={1}
                  onMouseEnter={[Function]}>
                  <a
                    className="sc-EHOje cGNlvO"
                    href={null}
                    onMouseEnter={[Function]}>
                    <styled.i
                      className=" fa fa-circle-o"
                      color="none">
                      <i
                        className=" fa fa-circle-o sc-ifAKCX gNVYmm"
                        color="none" />
                    </styled.i>
                    <styled.span
                      collapse={true}
                      hover={false}
                      level={1}>
                      <span
                        className="sc-htpNat kAgXoo">
                        Title
                      </span>
                    </styled.span>
                    <styled.span
                      collapse={true}
                      hover={false}
                      level={1}>
                      <span
                        className="sc-bwzfXH hvfKsK" />
                    </styled.span>
                  </a>
                </styled.a>
              </li>
            </styled.li>
          </MenuItem>
        </ul>
      </styled.ul>
    </li>
  </styled.li>
</MenuItem>
`;

exports[`<MenuItem /> renders correctly with active option 1`] = `
<li
  className="sc-gzVnrw bAnrUd"
  onMouseLeave={[Function]}>
  <a
    className="sc-EHOje jwlYFz"
    href={null}
    onClick={undefined}
    onMouseEnter={[Function]}>
    <i
      className=" fa fa-circle-o sc-ifAKCX gNVYmm"
      color="none" />
    <span
      className="sc-htpNat kAgXoo">
      Title
    </span>
    <span
      className="sc-bwzfXH hvfKsK" />
  </a>
</li>
`;

exports[`<MenuItem /> renders correctly with collapse option 1`] = `
<li
  className="sc-gzVnrw bAnrUd"
  onMouseLeave={[Function]}>
  <a
    className="sc-EHOje hjNqII"
    href={null}
    onClick={undefined}
    onMouseEnter={[Function]}>
    <i
      className=" fa fa-circle-o sc-ifAKCX gNVYmm"
      color="none" />
    <span
      className="sc-htpNat dYxBut">
      Title
    </span>
    <span
      className="sc-bwzfXH hvfKsK" />
  </a>
</li>
`;

exports[`<MenuItem /> renders correctly with default options 1`] = `
<li
  className="sc-gzVnrw bAnrUd"
  onMouseLeave={[Function]}>
  <a
    className="sc-EHOje hjNqII"
    href={null}
    onClick={undefined}
    onMouseEnter={[Function]}>
    <i
      className=" fa fa-circle-o sc-ifAKCX gNVYmm"
      color="none" />
    <span
      className="sc-htpNat kAgXoo">
      Title
    </span>
    <span
      className="sc-bwzfXH hvfKsK" />
  </a>
</li>
`;

exports[`<MenuItem /> renders correctly with icon options 1`] = `
<MenuItem
  collapse={false}
  href={null}
  icon={
    Object {
      "className": "fa fa-dashboard",
      "color": "primary",
    }
  }
  iconLeft={true}
  level={0}
  parentHover={false}
  title="Title">
  <styled.li
    collapse={false}
    hover={false}
    level={0}
    onMouseLeave={[Function]}>
    <li
      className="sc-gzVnrw bAnrUd"
      onMouseLeave={[Function]}>
      <styled.a
        collapse={false}
        hover={false}
        href={null}
        level={0}
        onMouseEnter={[Function]}>
        <a
          className="sc-EHOje hjNqII"
          href={null}
          onMouseEnter={[Function]}>
          <styled.i
            className="fa fa-dashboard"
            color="primary">
            <i
              className="fa fa-dashboard sc-ifAKCX epqAOq"
              color="primary" />
          </styled.i>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-htpNat kAgXoo">
              Title
            </span>
          </styled.span>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-bwzfXH hvfKsK" />
          </styled.span>
        </a>
      </styled.a>
    </li>
  </styled.li>
</MenuItem>
`;

exports[`<MenuItem /> renders correctly with icon options 2`] = `
<MenuItem
  collapse={false}
  href={null}
  icon={
    Object {
      "className": "fa fa-dashboard",
      "color": "success",
    }
  }
  iconLeft={true}
  level={0}
  parentHover={false}
  title="Title">
  <styled.li
    collapse={false}
    hover={false}
    level={0}
    onMouseLeave={[Function]}>
    <li
      className="sc-gzVnrw bAnrUd"
      onMouseLeave={[Function]}>
      <styled.a
        collapse={false}
        hover={false}
        href={null}
        level={0}
        onMouseEnter={[Function]}>
        <a
          className="sc-EHOje hjNqII"
          href={null}
          onMouseEnter={[Function]}>
          <styled.i
            className="fa fa-dashboard"
            color="success">
            <i
              className="fa fa-dashboard sc-ifAKCX kAMHao"
              color="success" />
          </styled.i>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-htpNat kAgXoo">
              Title
            </span>
          </styled.span>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-bwzfXH hvfKsK" />
          </styled.span>
        </a>
      </styled.a>
    </li>
  </styled.li>
</MenuItem>
`;

exports[`<MenuItem /> renders correctly with icon options 3`] = `
<MenuItem
  collapse={false}
  href={null}
  icon={
    Object {
      "className": "fa fa-dashboard",
      "color": "danger",
    }
  }
  iconLeft={true}
  level={0}
  parentHover={false}
  title="Title">
  <styled.li
    collapse={false}
    hover={false}
    level={0}
    onMouseLeave={[Function]}>
    <li
      className="sc-gzVnrw bAnrUd"
      onMouseLeave={[Function]}>
      <styled.a
        collapse={false}
        hover={false}
        href={null}
        level={0}
        onMouseEnter={[Function]}>
        <a
          className="sc-EHOje hjNqII"
          href={null}
          onMouseEnter={[Function]}>
          <styled.i
            className="fa fa-dashboard"
            color="danger">
            <i
              className="fa fa-dashboard sc-ifAKCX dYpNUJ"
              color="danger" />
          </styled.i>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-htpNat kAgXoo">
              Title
            </span>
          </styled.span>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-bwzfXH hvfKsK" />
          </styled.span>
        </a>
      </styled.a>
    </li>
  </styled.li>
</MenuItem>
`;

exports[`<MenuItem /> renders correctly with icon options 4`] = `
<MenuItem
  collapse={false}
  href={null}
  icon={
    Object {
      "className": "fa fa-dashboard",
      "color": "warning",
    }
  }
  iconLeft={true}
  level={0}
  parentHover={false}
  title="Title">
  <styled.li
    collapse={false}
    hover={false}
    level={0}
    onMouseLeave={[Function]}>
    <li
      className="sc-gzVnrw bAnrUd"
      onMouseLeave={[Function]}>
      <styled.a
        collapse={false}
        hover={false}
        href={null}
        level={0}
        onMouseEnter={[Function]}>
        <a
          className="sc-EHOje hjNqII"
          href={null}
          onMouseEnter={[Function]}>
          <styled.i
            className="fa fa-dashboard"
            color="warning">
            <i
              className="fa fa-dashboard sc-ifAKCX dQPsqb"
              color="warning" />
          </styled.i>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-htpNat kAgXoo">
              Title
            </span>
          </styled.span>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-bwzfXH hvfKsK" />
          </styled.span>
        </a>
      </styled.a>
    </li>
  </styled.li>
</MenuItem>
`;

exports[`<MenuItem /> renders correctly with icon options 5`] = `
<MenuItem
  collapse={false}
  href={null}
  icon={
    Object {
      "className": "fa fa-dashboard",
      "color": "information",
    }
  }
  iconLeft={true}
  level={0}
  parentHover={false}
  title="Title">
  <styled.li
    collapse={false}
    hover={false}
    level={0}
    onMouseLeave={[Function]}>
    <li
      className="sc-gzVnrw bAnrUd"
      onMouseLeave={[Function]}>
      <styled.a
        collapse={false}
        hover={false}
        href={null}
        level={0}
        onMouseEnter={[Function]}>
        <a
          className="sc-EHOje hjNqII"
          href={null}
          onMouseEnter={[Function]}>
          <styled.i
            className="fa fa-dashboard"
            color="information">
            <i
              className="fa fa-dashboard sc-ifAKCX cNnXsv"
              color="information" />
          </styled.i>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-htpNat kAgXoo">
              Title
            </span>
          </styled.span>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-bwzfXH hvfKsK" />
          </styled.span>
        </a>
      </styled.a>
    </li>
  </styled.li>
</MenuItem>
`;

exports[`<MenuItem /> renders correctly with labels 1`] = `
<li
  className="sc-gzVnrw bAnrUd"
  onMouseLeave={[Function]}>
  <a
    className="sc-EHOje hjNqII"
    href={null}
    onClick={undefined}
    onMouseEnter={[Function]}>
    <i
      className=" fa fa-circle-o sc-ifAKCX gNVYmm"
      color="none" />
    <span
      className="sc-htpNat kAgXoo">
      Title
    </span>
    <span
      className="sc-bwzfXH hvfKsK">
      <div
        className="sc-bdVaJa dxfLlh"
        type="danger">
        10
      </div>
      <div
        className="sc-bdVaJa jjHfCE"
        type="warning">
        12
      </div>
      <div
        className="sc-bdVaJa eNPCtA"
        type="information">
        8
      </div>
      <div
        className="sc-bdVaJa fHyscH"
        type="success">
        12
      </div>
      <div
        className="sc-bdVaJa hEibZp"
        type="other">
        8
      </div>
    </span>
  </a>
</li>
`;

exports[`<MenuItem /> renders correctly with labels while collapsed 1`] = `
<li
  className="sc-gzVnrw bAnrUd"
  onMouseLeave={[Function]}>
  <a
    className="sc-EHOje hjNqII"
    href={null}
    onClick={undefined}
    onMouseEnter={[Function]}>
    <i
      className=" fa fa-circle-o sc-ifAKCX gNVYmm"
      color="none" />
    <span
      className="sc-htpNat dYxBut">
      Title
    </span>
    <span
      className="sc-bwzfXH hvfKsK">
      <div
        className="sc-bdVaJa KrRXi"
        type="primary">
        10
      </div>
    </span>
  </a>
</li>
`;

exports[`<MenuItem /> renders correctly with link 1`] = `
<li
  className="sc-gzVnrw bAnrUd"
  onMouseLeave={[Function]}>
  <a
    className="sc-EHOje hjNqII"
    href="/some/link"
    onClick={undefined}
    onMouseEnter={[Function]}>
    <i
      className=" fa fa-circle-o sc-ifAKCX gNVYmm"
      color="none" />
    <span
      className="sc-htpNat kAgXoo">
      Title
    </span>
    <span
      className="sc-bwzfXH hvfKsK" />
  </a>
</li>
`;

exports[`<MenuItem /> renders correctly with multiple levels 1`] = `
<MenuItem
  collapse={false}
  href={null}
  icon={
    Object {
      "className": " fa fa-circle-o",
      "color": "none",
    }
  }
  iconLeft={true}
  level={0}
  parentHover={false}
  title="Level 1">
  <styled.li
    collapse={false}
    hover={false}
    level={0}
    onMouseLeave={[Function]}>
    <li
      className="sc-gzVnrw bAnrUd"
      onMouseLeave={[Function]}>
      <styled.a
        collapse={false}
        hover={false}
        href={null}
        level={0}
        onClick={[Function]}
        onMouseEnter={[Function]}>
        <a
          className="sc-EHOje hjNqII"
          href={null}
          onClick={[Function]}
          onMouseEnter={[Function]}>
          <styled.i
            className=" fa fa-circle-o"
            color="none">
            <i
              className=" fa fa-circle-o sc-ifAKCX gNVYmm"
              color="none" />
          </styled.i>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-htpNat kAgXoo">
              Level 1
            </span>
          </styled.span>
          <styled.span
            collapse={false}
            hover={false}
            level={0}>
            <span
              className="sc-bwzfXH hvfKsK">
              <styled.i
                className="fa fa-angle-left"
                collapse={false}
                hover={false}
                open={false}>
                <i
                  className="fa fa-angle-left sc-bxivhb khdcYs"
                  open={false} />
              </styled.i>
            </span>
          </styled.span>
        </a>
      </styled.a>
      <styled.ul
        collapse={false}
        hover={false}
        level={0}
        open={false}>
        <ul
          className="sc-bZQynM hTFmts"
          open={false}>
          <MenuItem
            collapse={false}
            href={null}
            icon={
              Object {
                "className": " fa fa-circle-o",
                "color": "none",
              }
            }
            iconLeft={true}
            level={1}
            parentHover={false}
            title="Level 2">
            <styled.li
              collapse={false}
              hover={false}
              level={1}
              onMouseLeave={[Function]}>
              <li
                className="sc-gzVnrw bAnrUd"
                onMouseLeave={[Function]}>
                <styled.a
                  collapse={false}
                  hover={false}
                  href={null}
                  level={1}
                  onClick={[Function]}
                  onMouseEnter={[Function]}>
                  <a
                    className="sc-EHOje cGNlvO"
                    href={null}
                    onClick={[Function]}
                    onMouseEnter={[Function]}>
                    <styled.i
                      className=" fa fa-circle-o"
                      color="none">
                      <i
                        className=" fa fa-circle-o sc-ifAKCX gNVYmm"
                        color="none" />
                    </styled.i>
                    <styled.span
                      collapse={false}
                      hover={false}
                      level={1}>
                      <span
                        className="sc-htpNat kAgXoo">
                        Level 2
                      </span>
                    </styled.span>
                    <styled.span
                      collapse={false}
                      hover={false}
                      level={1}>
                      <span
                        className="sc-bwzfXH hvfKsK">
                        <styled.i
                          className="fa fa-angle-left"
                          collapse={false}
                          hover={false}
                          open={false}>
                          <i
                            className="fa fa-angle-left sc-bxivhb khdcYs"
                            open={false} />
                        </styled.i>
                      </span>
                    </styled.span>
                  </a>
                </styled.a>
                <styled.ul
                  collapse={false}
                  hover={false}
                  level={1}
                  open={false}>
                  <ul
                    className="sc-bZQynM gLFAUt"
                    open={false}>
                    <MenuItem
                      collapse={false}
                      href={null}
                      icon={
                        Object {
                          "className": " fa fa-circle-o",
                          "color": "none",
                        }
                      }
                      iconLeft={true}
                      level={2}
                      parentHover={false}
                      title="Level 3">
                      <styled.li
                        collapse={false}
                        hover={false}
                        level={2}
                        onMouseLeave={[Function]}>
                        <li
                          className="sc-gzVnrw bAnrUd"
                          onMouseLeave={[Function]}>
                          <styled.a
                            collapse={false}
                            hover={false}
                            href={null}
                            level={2}
                            onMouseEnter={[Function]}>
                            <a
                              className="sc-EHOje cGNlvO"
                              href={null}
                              onMouseEnter={[Function]}>
                              <styled.i
                                className=" fa fa-circle-o"
                                color="none">
                                <i
                                  className=" fa fa-circle-o sc-ifAKCX gNVYmm"
                                  color="none" />
                              </styled.i>
                              <styled.span
                                collapse={false}
                                hover={false}
                                level={2}>
                                <span
                                  className="sc-htpNat kAgXoo">
                                  Level 3
                                </span>
                              </styled.span>
                              <styled.span
                                collapse={false}
                                hover={false}
                                level={2}>
                                <span
                                  className="sc-bwzfXH hvfKsK" />
                              </styled.span>
                            </a>
                          </styled.a>
                        </li>
                      </styled.li>
                    </MenuItem>
                  </ul>
                </styled.ul>
              </li>
            </styled.li>
          </MenuItem>
        </ul>
      </styled.ul>
    </li>
  </styled.li>
</MenuItem>
`;

exports[`<MenuItem /> renders correctly with theme 1`] = `
<li
  className="sc-gzVnrw bAnrUd"
  onMouseLeave={[Function]}>
  <a
    className="sc-EHOje gYcDH"
    href={null}
    onClick={undefined}
    onMouseEnter={[Function]}>
    <i
      className=" fa fa-circle-o sc-ifAKCX gNVYmm"
      color="none" />
    <span
      className="sc-htpNat kAgXoo">
      Title
    </span>
    <span
      className="sc-bwzfXH cOIusL" />
  </a>
</li>
`;

exports[`<MenuItem /> renders correctly with title 1`] = `
<li
  className="sc-gzVnrw bAnrUd"
  onMouseLeave={[Function]}>
  <a
    className="sc-EHOje hjNqII"
    href={null}
    onClick={undefined}
    onMouseEnter={[Function]}>
    <i
      className=" fa fa-circle-o sc-ifAKCX gNVYmm"
      color="none" />
    <span
      className="sc-htpNat kAgXoo">
      My Title
    </span>
    <span
      className="sc-bwzfXH hvfKsK" />
  </a>
</li>
`;
